# acados

examples/acados_python/: .gitignore
examples/acados_python/Unicycle/: utils.py
examples/acados_python/chain_mass/: export_chain_mass_integrator.py  plot_utils.py
examples/acados_python/crane/: time_optimal_example.py
examples/acados_python/cstr/: cstr_utils.py  integrator_experiment.py
examples/acados_python/external_model/: minimal_example_external_ode.py
examples/acados_python/getting_started/: utils.py
examples/acados_python/linear_mass_model/: linear_mass_model.py
examples/acados_python/pendulum_on_cart/common/: utils.py
examples/acados_python/pendulum_on_cart/mhe/: minimal_example_mhe_with_noisy_param.py  minimal_example_mhe_with_param.py
examples/acados_python/pendulum_on_cart/sim/: extensive_example_sim.py  minimal_example_sim_cmake.py
examples/acados_python/pmsm_example/: main.py
examples/acados_python/race_cars/: main.py  plotFcn.py
examples/acados_python/rsm_example/: main.py
examples/acados_python/tests/: test_sim_dae.py
examples/acados_python/traj_smooth/: acados_ocp.py  data.py  utils.py  vehicle_model.py
examples/acados_python/traj_smooth_full/: CMakeLists.txt  acados_main.py  batch_test.py  collision_coeff.py  data.py  json_parser.py  main.py  sync.sh  utils.py  vehicle_model.py
examples/acados_python/traj_smooth_full/data_0/: plotter.py
examples/acados_python/traj_smooth_full/src/: acados_main.cpp  collision_coeff.cpp  data.cpp  main.cpp
examples/acados_python/traj_smooth_full/test/: main.cpp
examples/acados_python/velocity_profile/: CMakeLists.txt  minimal_example_closed_loop.py  minimal_example_ocp.py  minimal_example_sim.py  model.py  utils.py
examples/c/engine_model/: engine_model.py
